--- a/web/index.html
+++ b/web/index.html
@@ -49,12 +49,12 @@
         width: 100%;
       }
 
-      @media screen and (max-width: 850px) {
+      /* @media screen and (max-width: 850px) {
         .instrument-wrapper {
           max-width: 250px;
           align-content: center;
         }
-      }
+      } */
     </style>
   </head>
   <body>
