--- a/web/index.html
+++ b/web/index.html
@@ -60,12 +60,19 @@
   <body>
     <div id="gameControls" class="gameControls">
       <button id="lockButton" onclick="lockPattern()">Lock Pattern</button>
-      <button id="unlockButton" onclick="unlockPattern()">
+      <!-- <button id="unlockButton" onclick="unlockPattern()">
         UnLock Pattern
-      </button>
-      <button id="resetButton" onclick="resetGame()">Reset Game</button>
-      <div id="status">Create a pattern (minimum 3 clicks)</div>
-      <div id="score">Score : 0</div>
+      </button> -->
+      <button id="resetButton" onclick="resetGame()">Reset Game</button></br> 
+      <div id="status">
+        1. Create a pattern with color button (minimum 3 clicks)</br> 
+        2. Lock the pattern </br> 
+        3. Play the pattern on the piano for points </br> </br> 
+
+        Make pattern as long as you like.  Longer pattern matching means more points!!
+      </div></br> 
+      <div id="score">Score: 0</div>
+      <div id="clicks">Clicks: 0</div>
     </div>
     <div class="button-wrapper">
       <button id="color">COLOR</button>
