--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
         height: 100vh;
         position: relative;
         animation: glow 3s infinite alternate;
+        color: teal;
       }
 
       .gameControls {
@@ -82,8 +83,8 @@
 
         Make pattern as long as you like.  Longer pattern matching means more points!!
       </div></br> 
-      <div id="score" style="font-size: 50px;">Score: 0</div>
-      <div id="clicks" style="font-size: 50px;">Clicks: 0</div>
+      <div id="score" style="font-size: 50px;"></div>
+      <div id="clicks" style="font-size: 50px;"></div>
     </div>
     <div class="button-wrapper">
       <button id="color">COLOR</button>
