--- a/web/index.html
+++ b/web/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>COLORS</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
     <style>
       body {
         margin: 0;
         height: 100vh;
         position: relative;
         animation: glow 3s infinite alternate;
-        color: teal;
+        color: rgb(114, 105, 105);
       }
 
       .gameControls {
@@ -59,8 +59,8 @@
       <nav style="text-align:center; margin-top: 20px;">
           <ul style="display: flex; justify-content:center; align-self:center;">
               <li style="padding: 25px; margin: 5px;" ><a href="/">Color Game</a></li>
-              <li style="padding: 25px; margin: 5px;" ><a href="code.html">Code Game</a></li>
-              <li style="padding: 25px; margin: 5px;"><a href="multiplayer.html">Multiplayer</a></li>
+              <li style="padding: 25px; margin: 5px;" ><a href="code">Code Game</a></li>
+              <li style="padding: 25px; margin: 5px;"><a href="multiplayer">Multiplayer</a></li>
          </ul>
       </nav>
   </header>
