--- a/web/index.html
+++ b/web/index.html
@@ -91,7 +91,7 @@
     </div>
     <div id="instrument-wrapper" class="instrument-wrapper"></div>
     <audio id="audio" preload="auto"></audio>
-    <script src="js/color.js"></script>
+    <script src="js/player.js"></script>
     <script>
       // function checkOrientation() {
       //   const instrumentWrapper = document.getElementById("instrument-wrapper");
