--- a/web/index.html
+++ b/web/index.html
@@ -58,15 +58,17 @@
         }
       } */
     </style>
+
   </head>
   <body>
+
     <header style="text-align: center;">
 
       <nav style="text-align:center; margin-top: 20px;">
           <ul style="display: flex; justify-content:center; align-self:center;">
               <li style="padding: 25px; margin: 5px;" ><a href="/">Color Game</a></li>
-              <li style="padding: 25px; margin: 5px;" ><a href="code.html">Code Game</a></li>
-              <li style="padding: 25px; margin: 5px;"><a href="multiplayer.html">Multiplayer</a></li>
+              <li style="padding: 25px; margin: 5px;" ><a href="code">Code Game</a></li>
+              <li style="padding: 25px; margin: 5px;"><a href="multiplayer">Multiplayer</a></li>
          </ul>
       </nav>
   </header>
@@ -91,7 +93,7 @@
     </div>
     <div id="instrument-wrapper" class="instrument-wrapper"></div>
     <audio id="audio" preload="auto"></audio>
-    <script src="js/player.js"></script>
+   
     <script>
       // function checkOrientation() {
       //   const instrumentWrapper = document.getElementById("instrument-wrapper");
@@ -111,5 +113,7 @@
 
       // window.addEventListener("resize", checkOrientation);
     </script>
+        <script src="js/player.js"></script>
+
   </body>
 </html>
