--- a/web/multiplayer.html
+++ b/web/multiplayer.html
@@ -72,6 +72,7 @@
          </ul>
       </nav>
   </header>
+    <h1> ONLY FoR THE BRAVE!!!</h1>
     <div id="gameControls" class="gameControls">
       <button id="lockButton" onclick="lockPattern()">Lock Pattern</button>
       <!-- <button id="unlockButton" onclick="unlockPattern()">
