--- a/web/multiplayer.html
+++ b/web/multiplayer.html
@@ -67,8 +67,8 @@
       <nav style="text-align:center; margin-top: 20px;">
           <ul style="display: flex; justify-content:center; align-self:center;">
               <li style="padding: 25px; margin: 5px;" ><a href="/">Color Game</a></li>
-              <li style="padding: 25px; margin: 5px;" ><a href="code.html">Code Game</a></li>
-              <li style="padding: 25px; margin: 5px;"><a href="multiplayer.html">Multiplayer</a></li>
+              <li style="padding: 25px; margin: 5px;" ><a href="code">Code Game</a></li>
+              <li style="padding: 25px; margin: 5px;"><a href="multiplayer">Multiplayer</a></li>
          </ul>
       </nav>
   </header>
@@ -92,6 +92,10 @@
     <div class="button-wrapper">
       <button id="color">COLOR</button>
     </div>
+    <button id="open">STart SerVer</button>
+    <button id="close">StOp SerVer</button>  
+    <div id="output" style="max-height: 70vh;overflow-y: scroll;"></div>
+  
     <div id="instrument-wrapper" class="instrument-wrapper"></div>
     <audio id="audio" preload="auto"></audio>
     <script>
