--- a/web/index.html
+++ b/web/index.html
@@ -172,8 +172,8 @@
     <header>
       <nav>
         <ul>
-          <li><a href="/">Color Game</a></li>
-          <li><a href="code">Code Game</a></li>
+          <li><a href="/">Color Festival Game</a></li>
+          <li><a href="code">Color Code Game</a></li>
           <li><a href="multiplayer">Multiplayer</a></li>
         </ul>
       </nav>
@@ -192,7 +192,14 @@
             padding: 8px 0;
           "
         >
-          <ul style="margin: 0; padding: 0; list-style-type: none">
+          <ul
+            style="
+              margin: 0;
+              padding: 0;
+              list-style-type: none;
+              font-weight: bold;
+            "
+          >
             <li style="color: rgb(240, 240, 240)">C</li>
             <li style="color: rgb(240, 240, 240)">C</li>
             <li style="color: rgb(240, 240, 240)">C</li>
