--- a/web/code.html
+++ b/web/code.html
@@ -5,5 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COLORS</title>
   </head>
-  <body></body>
+  <body>
+    <p
+      style="
+        display: flex;
+        margin: 0;
+        height: 50vh;
+        justify-content: center;
+        align-items: center;
+        font-size: 50px;
+      "
+    >
+      Coming Soon
+    </p>
+  </body>
 </html>
